--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,200 @@
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
-    <title>聯絡我們</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="法律服務創意黑客松聯絡資訊，包含聯絡方式、聯絡表單、常見問題與社群媒體">
+    <meta name="keywords" content="聯絡我們,聯絡資訊,常見問題,社群媒體">
+    <meta name="author" content="東吳大學人工智慧應用社">
+    <title>聯絡我們 - 法律服務創意黑客松</title>
+    <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⚖️</text></svg>">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header><h1>聯絡我們</h1></header>
+    <header class="hero-header">
+        <div class="container">
+            <nav class="main-nav">
+                <div class="logo">
+                    <h1>法律服務創意黑客松</h1>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="index.html">首頁</a></li>
+                    <li><a href="schedule.html">時程</a></li>
+                    <li><a href="guideline.html">活動辦法</a></li>
+                    <li><a href="sponsor.html">贊助單位</a></li>
+                    <li><a href="contact.html" class="active">聯絡我們</a></li>
+                </ul>
+            </nav>
+            
+            <div class="hero-content">
+                <h1 class="hero-title">聯絡我們</h1>
+                <p class="hero-subtitle">有任何問題都歡迎與我們聯絡</p>
+            </div>
+        </div>
+    </header>
+
     <main>
-        <p>如有問題，請來信 contact@example.com</p>
+        <!-- 聯絡資訊 -->
+        <section class="overview-section">
+            <div class="container">
+                <h2 class="section-title">聯絡資訊</h2>
+                <div class="contact-grid">
+                    <div class="contact-card">
+                        <div class="contact-icon">📧</div>
+                        <h3>Email</h3>
+                        <p>hackathon@scu.edu.tw</p>
+                        <p class="contact-note">一般諮詢與報名相關問題</p>
+                    </div>
+                    <div class="contact-card">
+                        <div class="contact-icon">📱</div>
+                        <h3>Line官方帳號</h3>
+                        <p>@scuai_hackathon</p>
+                        <p class="contact-note">即時訊息與活動更新</p>
+                    </div>
+                    <div class="contact-card">
+                        <div class="contact-icon">📞</div>
+                        <h3>電話</h3>
+                        <p>02-2881-9471 #1234</p>
+                        <p class="contact-note">上班時間：週一至週五 9:00-17:00</p>
+                    </div>
+                    <div class="contact-card">
+                        <div class="contact-icon">📍</div>
+                        <h3>地址</h3>
+                        <p>台北市士林區臨溪路70號</p>
+                        <p class="contact-note">東吳大學城中校區</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 聯絡表單 -->
+        <section class="timeline-section">
+            <div class="container">
+                <h2 class="section-title">聯絡表單</h2>
+                <div class="contact-form-container">
+                    <form class="contact-form" action="#" method="POST">
+                        <div class="form-group">
+                            <label for="name">姓名 *</label>
+                            <input type="text" id="name" name="name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email *</label>
+                            <input type="email" id="email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">電話</label>
+                            <input type="tel" id="phone" name="phone">
+                        </div>
+                        <div class="form-group">
+                            <label for="subject">主旨 *</label>
+                            <select id="subject" name="subject" required>
+                                <option value="">請選擇主旨</option>
+                                <option value="registration">報名相關</option>
+                                <option value="technical">技術問題</option>
+                                <option value="sponsorship">贊助合作</option>
+                                <option value="general">一般諮詢</option>
+                                <option value="other">其他</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="message">訊息內容 *</label>
+                            <textarea id="message" name="message" rows="6" required placeholder="請詳細描述您的問題或需求..."></textarea>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary btn-large">送出訊息</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+
+        <!-- 常見問題 -->
+        <section class="overview-section">
+            <div class="container">
+                <h2 class="section-title">常見問題</h2>
+                <div class="faq-container">
+                    <div class="faq-item">
+                        <h3>Q: 如何報名參加黑客松？</h3>
+                        <p>A: 請透過首頁的報名按鈕前往Google表單填寫報名資料，或直接聯絡我們索取報名表單。</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3>Q: 需要程式背景才能參加嗎？</h3>
+                        <p>A: 不需要！我們使用AWS PartyRock等低程式平台，即使沒有程式背景也能參與開發。</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3>Q: 可以跨校組隊嗎？</h3>
+                        <p>A: 可以！歡迎跨校、跨系所組隊，每隊2-4人。</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3>Q: 決賽當天需要準備什麼？</h3>
+                        <p>A: 請準備簡報檔案、原型展示，並確保所有隊員都能親自出席。</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3>Q: 如何獲得技術支援？</h3>
+                        <p>A: 入選隊伍將獲得AWS技術導師指導，並可參加工作坊獲得專業諮詢。</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3>Q: 獎金如何發放？</h3>
+                        <p>A: 得獎隊伍將於決賽當天頒發獎狀，獎金將於活動結束後透過銀行轉帳發放。</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 社群媒體 -->
+        <section class="timeline-section">
+            <div class="container">
+                <h2 class="section-title">關注我們</h2>
+                <div class="social-media">
+                    <div class="social-card">
+                        <div class="social-icon">📘</div>
+                        <h3>Facebook</h3>
+                        <p>東吳大學人工智慧應用社</p>
+                        <a href="#" class="btn btn-secondary">前往粉絲專頁</a>
+                    </div>
+                    <div class="social-card">
+                        <div class="social-icon">📷</div>
+                        <h3>Instagram</h3>
+                        <p>@scuai_club</p>
+                        <a href="#" class="btn btn-secondary">追蹤我們</a>
+                    </div>
+                    <div class="social-card">
+                        <div class="social-icon">🐦</div>
+                        <h3>Twitter</h3>
+                        <p>@SCUAI_Hackathon</p>
+                        <a href="#" class="btn btn-secondary">追蹤我們</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer><a href="index.html">返回首頁</a></footer>
+
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>法律服務創意黑客松</h3>
+                    <p>用創意打造 AI 賦能的法律服務未來</p>
+                </div>
+                <div class="footer-section">
+                    <h4>聯絡資訊</h4>
+                    <p>主辦單位：東吳大學人工智慧應用社</p>
+                    <p>指導單位：東吳大學人本AI研究中心</p>
+                </div>
+                <div class="footer-section">
+                    <h4>快速連結</h4>
+                    <ul>
+                        <li><a href="schedule.html">活動時程</a></li>
+                        <li><a href="guideline.html">活動辦法</a></li>
+                        <li><a href="sponsor.html">贊助單位</a></li>
+                        <li><a href="contact.html">聯絡我們</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 法律服務創意黑客松. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
