--- a/guideline.html
+++ b/guideline.html
@@ -3,15 +3,307 @@
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
-    <title>活動辦法</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="法律服務創意黑客松活動辦法，包含參賽資格、競賽規則、獎項說明與技術要求">
+    <meta name="keywords" content="活動辦法,參賽規則,獎項說明,技術要求">
+    <meta name="author" content="東吳大學人工智慧應用社">
+    <title>活動辦法 - 法律服務創意黑客松</title>
+    <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⚖️</text></svg>">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header><h1>活動辦法</h1></header>
+    <header class="hero-header">
+        <div class="container">
+            <nav class="main-nav">
+                <div class="logo">
+                    <h1>法律服務創意黑客松</h1>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="index.html">首頁</a></li>
+                    <li><a href="schedule.html">時程</a></li>
+                    <li><a href="guideline.html" class="active">活動辦法</a></li>
+                    <li><a href="sponsor.html">贊助單位</a></li>
+                    <li><a href="contact.html">聯絡我們</a></li>
+                </ul>
+            </nav>
+            
+            <div class="hero-content">
+                <h1 class="hero-title">活動辦法</h1>
+                <p class="hero-subtitle">詳細了解參賽規則與評審標準</p>
+            </div>
+        </div>
+    </header>
+
     <main>
-        <p>僅開放大專院校學生，每隊2-4人。決賽使用 PartyRock 原型展示。</p>
-        <p>若參賽作品使用網路爬蟲，請參賽者自行確認其資料來源之授權責任。</p>
+        <!-- 參賽資格 -->
+        <section class="overview-section">
+            <div class="container">
+                <h2 class="section-title">參賽資格</h2>
+                <div class="guideline-grid">
+                    <div class="guideline-card">
+                        <div class="card-icon">👥</div>
+                        <h3>參與對象</h3>
+                        <p>全台大專校院在學學生，年齡需滿18歲以上</p>
+                    </div>
+                    <div class="guideline-card">
+                        <div class="card-icon">👨‍👩‍👧‍👦</div>
+                        <h3>組隊方式</h3>
+                        <p>每隊2-4人，可跨校、跨系所組隊</p>
+                    </div>
+                    <div class="guideline-card">
+                        <div class="card-icon">📝</div>
+                        <h3>報名方式</h3>
+                        <p>透過Google表單報名，需提供完整隊員資訊</p>
+                    </div>
+                    <div class="guideline-card">
+                        <div class="card-icon">🎯</div>
+                        <h3>參賽目標</h3>
+                        <p>運用AI技術提升法律服務可近性與效率</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 競賽規則 -->
+        <section class="timeline-section">
+            <div class="container">
+                <h2 class="section-title">競賽規則</h2>
+                <div class="rules-content">
+                    <div class="rule-section">
+                        <h3>📋 初賽階段</h3>
+                        <div class="rule-details">
+                            <div class="rule-item">
+                                <h4>繳件內容</h4>
+                                <ul>
+                                    <li>創意提案書（PDF格式，5-10頁）</li>
+                                    <li>初步原型展示（可為截圖或影片）</li>
+                                    <li>團隊介紹與分工說明</li>
+                                    <li>技術可行性分析</li>
+                                </ul>
+                            </div>
+                            <div class="rule-item">
+                                <h4>評選標準</h4>
+                                <ul>
+                                    <li>創意性與創新性（30%）</li>
+                                    <li>法律服務價值（25%）</li>
+                                    <li>技術可行性（25%）</li>
+                                    <li>市場潛力（20%）</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="rule-section">
+                        <h3>🔧 工作坊階段</h3>
+                        <div class="rule-details">
+                            <div class="rule-item">
+                                <h4>入選隊伍</h4>
+                                <ul>
+                                    <li>初賽評選出20-30組隊伍</li>
+                                    <li>提供AWS PartyRock技術指導</li>
+                                    <li>法律顧問諮詢服務</li>
+                                    <li>原型優化與完善</li>
+                                </ul>
+                            </div>
+                            <div class="rule-item">
+                                <h4>技術支援</h4>
+                                <ul>
+                                    <li>AWS平台使用授權</li>
+                                    <li>技術導師一對一指導</li>
+                                    <li>法律專業諮詢</li>
+                                    <li>原型開發工具介紹</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="rule-section">
+                        <h3>🏆 決賽階段</h3>
+                        <div class="rule-details">
+                            <div class="rule-item">
+                                <h4>展示要求</h4>
+                                <ul>
+                                    <li>5分鐘現場簡報</li>
+                                    <li>3分鐘評審Q&A</li>
+                                    <li>完整原型演示</li>
+                                    <li>商業模式說明</li>
+                                </ul>
+                            </div>
+                            <div class="rule-item">
+                                <h4>評審標準</h4>
+                                <ul>
+                                    <li>原型完整度（30%）</li>
+                                    <li>簡報表達能力（20%）</li>
+                                    <li>技術實現程度（25%）</li>
+                                    <li>創新價值與影響力（25%）</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 獎項說明 -->
+        <section class="overview-section">
+            <div class="container">
+                <h2 class="section-title">獎項說明</h2>
+                <div class="awards-grid">
+                    <div class="award-card first-place">
+                        <div class="award-icon">🥇</div>
+                        <h3>第一名</h3>
+                        <div class="award-prize">獎金 10,000元</div>
+                        <p>獎品 + 獎狀</p>
+                        <ul>
+                            <li>AWS雲端服務抵用券</li>
+                            <li>法律科技相關書籍</li>
+                            <li>優先參與後續活動機會</li>
+                        </ul>
+                    </div>
+                    <div class="award-card second-place">
+                        <div class="award-icon">🥈</div>
+                        <h3>第二名</h3>
+                        <div class="award-prize">獎金 6,000元</div>
+                        <p>獎品 + 獎狀</p>
+                        <ul>
+                            <li>AWS雲端服務抵用券</li>
+                            <li>法律科技相關書籍</li>
+                        </ul>
+                    </div>
+                    <div class="award-card third-place">
+                        <div class="award-icon">🥉</div>
+                        <h3>第三名</h3>
+                        <div class="award-prize">獎金 4,000元</div>
+                        <p>獎品 + 獎狀</p>
+                        <ul>
+                            <li>AWS雲端服務抵用券</li>
+                            <li>法律科技相關書籍</li>
+                        </ul>
+                    </div>
+                    <div class="award-card honorable">
+                        <div class="award-icon">🏅</div>
+                        <h3>佳作獎</h3>
+                        <div class="award-prize">獎金 1,000元 × 3名</div>
+                        <p>獎狀</p>
+                        <ul>
+                            <li>特殊創意獎</li>
+                            <li>最佳技術實現獎</li>
+                            <li>最具社會影響力獎</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 技術要求 -->
+        <section class="timeline-section">
+            <div class="container">
+                <h2 class="section-title">技術要求</h2>
+                <div class="tech-requirements">
+                    <div class="tech-section">
+                        <h3>💻 技術平台</h3>
+                        <div class="tech-content">
+                            <div class="tech-item">
+                                <h4>主要平台</h4>
+                                <p><strong>AWS PartyRock</strong> - 低程式開發平台，無需深厚程式背景</p>
+                                <p>提供完整的AI模型整合與應用開發環境</p>
+                            </div>
+                            <div class="tech-item">
+                                <h4>其他選擇</h4>
+                                <p>亦可使用其他低／無程式平台，如：</p>
+                                <ul>
+                                    <li>Bubble</li>
+                                    <li>Webflow</li>
+                                    <li>Zapier</li>
+                                    <li>其他AI整合平台</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="tech-section">
+                        <h3>📱 作品要求</h3>
+                        <div class="tech-content">
+                            <div class="tech-item">
+                                <h4>功能要求</h4>
+                                <ul>
+                                    <li>具備基本的使用者介面</li>
+                                    <li>整合AI功能或自動化流程</li>
+                                    <li>解決特定法律服務問題</li>
+                                    <li>具備實際應用價值</li>
+                                </ul>
+                            </div>
+                            <div class="tech-item">
+                                <h4>技術限制</h4>
+                                <ul>
+                                    <li>不得使用付費第三方服務（AWS提供者除外）</li>
+                                    <li>需確保資料安全與隱私保護</li>
+                                    <li>遵守相關法律法規</li>
+                                    <li>提供完整的技術文件</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 注意事項 -->
+        <section class="overview-section">
+            <div class="container">
+                <h2 class="section-title">注意事項</h2>
+                <div class="notice-content">
+                    <div class="notice-card">
+                        <h3>⚠️ 重要提醒</h3>
+                        <ul>
+                            <li>所有隊員必須為18歲以上之大專校院在學學生</li>
+                            <li>參賽作品必須為原創，不得抄襲或侵犯他人智慧財產權</li>
+                            <li>決賽當天所有隊員必須親自出席，不得委託他人代表</li>
+                            <li>主辦單位保留活動規則修改之權利</li>
+                            <li>參賽者同意授權主辦單位使用其肖像權進行活動宣傳</li>
+                        </ul>
+                    </div>
+                    <div class="notice-card">
+                        <h3>📞 聯絡資訊</h3>
+                        <p>如有任何疑問，請透過以下方式聯絡我們：</p>
+                        <ul>
+                            <li>Email: hackathon@scu.edu.tw</li>
+                            <li>Line官方帳號: @scuai_hackathon</li>
+                            <li>Facebook: 東吳大學人工智慧應用社</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer><a href="index.html">返回首頁</a></footer>
+
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>法律服務創意黑客松</h3>
+                    <p>用創意打造 AI 賦能的法律服務未來</p>
+                </div>
+                <div class="footer-section">
+                    <h4>聯絡資訊</h4>
+                    <p>主辦單位：東吳大學人工智慧應用社</p>
+                    <p>指導單位：東吳大學人本AI研究中心</p>
+                </div>
+                <div class="footer-section">
+                    <h4>快速連結</h4>
+                    <ul>
+                        <li><a href="schedule.html">活動時程</a></li>
+                        <li><a href="guideline.html">活動辦法</a></li>
+                        <li><a href="sponsor.html">贊助單位</a></li>
+                        <li><a href="contact.html">聯絡我們</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 法律服務創意黑客松. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
