--- a/index.html
+++ b/index.html
@@ -4,30 +4,229 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>法律服務創意黑客松</title>
+    <meta name="description" content="東吳大學人工智慧應用社舉辦的法律服務創意黑客松，鼓勵學生運用AI技術提升法律服務可近性與效率">
+    <meta name="keywords" content="法律服務,黑客松,AI,人工智慧,東吳大學,法律科技">
+    <meta name="author" content="東吳大學人工智慧應用社">
+    <meta property="og:title" content="法律服務創意黑客松 - 東吳大學人工智慧應用社">
+    <meta property="og:description" content="用創意打造 AI 賦能的法律服務未來">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://kesoner.github.io/SCUAI-Hackathon">
+    <title>法律服務創意黑客松 - 東吳大學人工智慧應用社</title>
+    <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⚖️</text></svg>">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>法律服務創意黑客松</h1>
-        <p>用創意打造 AI 賦能的法律服務未來</p>
-        <nav>
-            <a href="index.html">首頁</a>
-            <a href="schedule.html">時程</a>
-            <a href="guideline.html">活動辦法</a>
-            <a href="sponsor.html">贊助單位</a>
-            <a href="contact.html">聯絡我們</a>
-        </nav>
+    <header class="hero-header">
+        <div class="container">
+            <nav class="main-nav">
+                <div class="logo">
+                    <h1>法律服務創意黑客松</h1>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="index.html" class="active">首頁</a></li>
+                    <li><a href="schedule.html">時程</a></li>
+                    <li><a href="guideline.html">活動辦法</a></li>
+                    <li><a href="sponsor.html">贊助單位</a></li>
+                    <li><a href="contact.html">聯絡我們</a></li>
+                </ul>
+            </nav>
+            
+            <div class="hero-content">
+                <h1 class="hero-title">法律服務創意黑客松</h1>
+                <p class="hero-subtitle">用創意打造 AI 賦能的法律服務未來</p>
+                <p class="hero-description">鼓勵大專院校學生運用創意思維與 AI 技術，提出提升法律可近性與服務效率的創新解決方案</p>
+                <div class="hero-buttons">
+                    <a href="#register" class="btn btn-primary">立即報名</a>
+                    <a href="guideline.html" class="btn btn-secondary">了解詳情</a>
+                </div>
+            </div>
+        </div>
     </header>
+
     <main>
-        <section>
-            <h2>活動簡介</h2>
-            <p>開放全台大專學生，使用 AWS PartyRock 或其他低程式平台創作法律服務應用。</p>
-            <a class="button" href="https://example.com/register" target="_blank">立即報名</a>
+        <!-- 活動概覽 -->
+        <section class="overview-section">
+            <div class="container">
+                <h2 class="section-title">活動概覽</h2>
+                <div class="overview-grid">
+                    <div class="overview-card">
+                        <div class="card-icon">🎯</div>
+                        <h3>活動目標</h3>
+                        <p>運用創意思維與 AI 技術，提出提升法律可近性與服務效率的創新點子</p>
+                    </div>
+                    <div class="overview-card">
+                        <div class="card-icon">👥</div>
+                        <h3>參與對象</h3>
+                        <p>全台大專校院在學學生(18歲以上)，每隊2-4人，預計招收20-30組</p>
+                    </div>
+                    <div class="overview-card">
+                        <div class="card-icon">🏆</div>
+                        <h3>獎金總額</h3>
+                        <p>總獎金新台幣40,000元，包含第一名10,000元、第二名6,000元、第三名4,000元</p>
+                    </div>
+                    <div class="overview-card">
+                        <div class="card-icon">💻</div>
+                        <h3>技術平台</h3>
+                        <p>使用低／無程式平台（如 AWS PartyRock）進行原型實作，無需深厚程式背景</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 重要時程 -->
+        <section class="timeline-section">
+            <div class="container">
+                <h2 class="section-title">重要時程</h2>
+                <div class="timeline">
+                    <div class="timeline-item">
+                        <div class="timeline-date">2025年11月1日</div>
+                        <div class="timeline-content">
+                            <h3>初賽繳件截止</h3>
+                            <p>提交創意提案與初步原型</p>
+                        </div>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="timeline-date">2025年11月19日</div>
+                        <div class="timeline-content">
+                            <h3>入選工作坊</h3>
+                            <p>技術指導與原型優化</p>
+                        </div>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="timeline-date">2025年12月17日</div>
+                        <div class="timeline-content">
+                            <h3>決賽暨頒獎典禮</h3>
+                            <p>最終展示與頒獎</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 主辦單位 -->
+        <section class="organizer-section">
+            <div class="container">
+                <h2 class="section-title">主辦單位</h2>
+                <div class="organizer-info">
+                    <div class="organizer-card">
+                        <h3>主辦單位</h3>
+                        <p>東吳大學 人工智慧應用社</p>
+                    </div>
+                    <div class="organizer-card">
+                        <h3>指導單位</h3>
+                        <p>東吳大學人本AI研究中心</p>
+                    </div>
+                    <div class="organizer-card">
+                        <h3>協辦單位</h3>
+                        <p>AWS、台灣法律科技協會等</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 報名區域 -->
+        <section id="register" class="register-section">
+            <div class="container">
+                <h2 class="section-title">立即報名</h2>
+                <div class="register-content">
+                    <p>報名截止日期：2025年10月31日</p>
+                    <a href="https://forms.gle/example" class="btn btn-primary btn-large" target="_blank">
+                        前往報名表單
+                    </a>
+                    <p class="register-note">* 請確保所有隊員皆為18歲以上之大專校院在學學生</p>
+                </div>
+            </div>
         </section>
     </main>
+
     <footer>
-        <p>主辦單位：XXX法律科技研究中心 · 協辦單位：AWS Taiwan</p>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>法律服務創意黑客松</h3>
+                    <p>用創意打造 AI 賦能的法律服務未來</p>
+                </div>
+                <div class="footer-section">
+                    <h4>聯絡資訊</h4>
+                    <p>主辦單位：東吳大學人工智慧應用社</p>
+                    <p>指導單位：東吳大學人本AI研究中心</p>
+                </div>
+                <div class="footer-section">
+                    <h4>快速連結</h4>
+                    <ul>
+                        <li><a href="schedule.html">活動時程</a></li>
+                        <li><a href="guideline.html">活動辦法</a></li>
+                        <li><a href="sponsor.html">贊助單位</a></li>
+                        <li><a href="contact.html">聯絡我們</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 法律服務創意黑客松. All rights reserved.</p>
+            </div>
+        </div>
     </footer>
+    
+    <script>
+        // 平滑滾動功能
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    target.scrollIntoView({
+                        behavior: 'smooth',
+                        block: 'start'
+                    });
+                }
+            });
+        });
+
+        // 導航欄滾動效果
+        window.addEventListener('scroll', function() {
+            const nav = document.querySelector('.main-nav');
+            if (window.scrollY > 100) {
+                nav.style.background = 'rgba(26, 54, 93, 0.95)';
+                nav.style.backdropFilter = 'blur(10px)';
+            } else {
+                nav.style.background = 'transparent';
+                nav.style.backdropFilter = 'none';
+            }
+        });
+
+        // 表單驗證（如果存在）
+        const contactForm = document.querySelector('.contact-form');
+        if (contactForm) {
+            contactForm.addEventListener('submit', function(e) {
+                e.preventDefault();
+                alert('感謝您的訊息！我們會盡快回覆您。');
+                this.reset();
+            });
+        }
+
+        // 動畫效果
+        const observerOptions = {
+            threshold: 0.1,
+            rootMargin: '0px 0px -50px 0px'
+        };
+
+        const observer = new IntersectionObserver(function(entries) {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.style.opacity = '1';
+                    entry.target.style.transform = 'translateY(0)';
+                }
+            });
+        }, observerOptions);
+
+        // 觀察所有卡片元素
+        document.querySelectorAll('.overview-card, .timeline-item, .organizer-card, .schedule-card, .venue-card, .transport-card, .guideline-card, .award-card, .tech-section, .notice-card, .contact-card, .social-card, .sponsor-card, .partner-card, .plan-card').forEach(el => {
+            el.style.opacity = '0';
+            el.style.transform = 'translateY(30px)';
+            el.style.transition = 'opacity 0.6s ease, transform 0.6s ease';
+            observer.observe(el);
+        });
+    </script>
 </body>
 </html>
