--- a/schedule.html
+++ b/schedule.html
@@ -3,18 +3,224 @@
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
-    <title>活動時程</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="法律服務創意黑客松活動時程，包含重要時程概覽、決賽流程、場地資訊與交通指引">
+    <meta name="keywords" content="活動時程,黑客松,決賽流程,場地資訊">
+    <meta name="author" content="東吳大學人工智慧應用社">
+    <title>活動時程 - 法律服務創意黑客松</title>
+    <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⚖️</text></svg>">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header><h1>活動時程</h1></header>
+    <header class="hero-header">
+        <div class="container">
+            <nav class="main-nav">
+                <div class="logo">
+                    <h1>法律服務創意黑客松</h1>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="index.html">首頁</a></li>
+                    <li><a href="schedule.html" class="active">時程</a></li>
+                    <li><a href="guideline.html">活動辦法</a></li>
+                    <li><a href="sponsor.html">贊助單位</a></li>
+                    <li><a href="contact.html">聯絡我們</a></li>
+                </ul>
+            </nav>
+            
+            <div class="hero-content">
+                <h1 class="hero-title">活動時程</h1>
+                <p class="hero-subtitle">完整掌握活動流程與重要時程</p>
+            </div>
+        </div>
+    </header>
+
     <main>
-        <ul>
-            <li>報名截止：2025/11/1</li>
-            <li>入選工作坊：2025/11/19</li>
-            <li>決賽與頒獎：2025/12/17</li>
-        </ul>
+        <!-- 重要時程概覽 -->
+        <section class="overview-section">
+            <div class="container">
+                <h2 class="section-title">重要時程概覽</h2>
+                <div class="schedule-overview">
+                    <div class="schedule-card">
+                        <div class="schedule-date">2025年9月17日</div>
+                        <h3>預告發布與開放報名</h3>
+                        <p>活動正式對外發布，開始接受參賽隊伍報名</p>
+                    </div>
+                    <div class="schedule-card">
+                        <div class="schedule-date">2025年9月24日</div>
+                        <h3>期初社大兼競賽說明會</h3>
+                        <p>首次線上直播說明會，詳細介紹競賽規則與技術平台</p>
+                    </div>
+                    <div class="schedule-card">
+                        <div class="schedule-date">2025年11月1日</div>
+                        <h3>初賽繳件截止</h3>
+                        <p>提交創意提案與初步原型，評審進行初選</p>
+                    </div>
+                    <div class="schedule-card">
+                        <div class="schedule-date">2025年11月19日</div>
+                        <h3>入選工作坊</h3>
+                        <p>技術指導與原型優化，AWS平台支援</p>
+                    </div>
+                    <div class="schedule-card">
+                        <div class="schedule-date">2025年12月17日</div>
+                        <h3>決賽暨頒獎典禮</h3>
+                        <p>最終展示與頒獎，見證創新法律服務的誕生</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 決賽當天詳細流程 -->
+        <section class="timeline-section">
+            <div class="container">
+                <h2 class="section-title">決賽當天詳細流程</h2>
+                <div class="final-schedule">
+                    <div class="schedule-item">
+                        <div class="time-slot">18:00 - 18:30</div>
+                        <div class="schedule-details">
+                            <h3>參賽者與貴賓報到</h3>
+                            <p>現場報到、領取資料袋、確認設備</p>
+                            <div class="location">📍 2123會議室</div>
+                        </div>
+                    </div>
+                    <div class="schedule-item">
+                        <div class="time-slot">18:20 - 18:50</div>
+                        <div class="schedule-details">
+                            <h3>開場與主辦單位致詞</h3>
+                            <p>東吳大學人工智慧應用社致詞、活動介紹</p>
+                            <div class="location">📍 6大會議室</div>
+                        </div>
+                    </div>
+                    <div class="schedule-item">
+                        <div class="time-slot">18:50 - 19:30</div>
+                        <div class="schedule-details">
+                            <h3>決賽隊伍創意簡報（上半場）</h3>
+                            <p>前10組隊伍進行5分鐘簡報與3分鐘Q&A</p>
+                            <div class="location">📍 菁英講堂</div>
+                        </div>
+                    </div>
+                    <div class="schedule-item">
+                        <div class="time-slot">19:40 - 20:20</div>
+                        <div class="schedule-details">
+                            <h3>決賽隊伍創意簡報（下半場）</h3>
+                            <p>後10組隊伍進行5分鐘簡報與3分鐘Q&A</p>
+                            <div class="location">📍 菁英講堂</div>
+                        </div>
+                    </div>
+                    <div class="schedule-item">
+                        <div class="time-slot">20:20 - 20:40</div>
+                        <div class="schedule-details">
+                            <h3>評審意見回饋與總結</h3>
+                            <p>評審委員綜合點評與建議</p>
+                            <div class="location">📍 菁英講堂</div>
+                        </div>
+                    </div>
+                    <div class="schedule-item">
+                        <div class="time-slot">20:40 - 21:00</div>
+                        <div class="schedule-details">
+                            <h3>頒獎典禮與感言分享</h3>
+                            <p>公布得獎名單、頒發獎金與獎品</p>
+                            <div class="location">📍 菁英講堂</div>
+                        </div>
+                    </div>
+                    <div class="schedule-item">
+                        <div class="time-slot">21:00 - 22:00</div>
+                        <div class="schedule-details">
+                            <h3>合影、散會、場復</h3>
+                            <p>團體合影、交流時間、場地整理</p>
+                            <div class="location">📍 各活動場地</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 場地資訊 -->
+        <section class="venue-section">
+            <div class="container">
+                <h2 class="section-title">場地資訊</h2>
+                <div class="venue-grid">
+                    <div class="venue-card">
+                        <h3>2123會議室</h3>
+                        <p>參賽者報到、資料領取</p>
+                        <div class="venue-details">
+                            <p><strong>容量：</strong>50人</p>
+                            <p><strong>設備：</strong>投影設備、Wi-Fi</p>
+                        </div>
+                    </div>
+                    <div class="venue-card">
+                        <h3>6大會議室</h3>
+                        <p>開場致詞、活動介紹</p>
+                        <div class="venue-details">
+                            <p><strong>容量：</strong>100人</p>
+                            <p><strong>設備：</strong>投影設備、音響系統、Wi-Fi</p>
+                        </div>
+                    </div>
+                    <div class="venue-card">
+                        <h3>菁英講堂</h3>
+                        <p>決賽簡報、頒獎典禮</p>
+                        <div class="venue-details">
+                            <p><strong>容量：</strong>200人</p>
+                            <p><strong>設備：</strong>大型投影、專業音響、無線麥克風</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 交通指引 -->
+        <section class="transport-section">
+            <div class="container">
+                <h2 class="section-title">交通指引</h2>
+                <div class="transport-info">
+                    <div class="transport-card">
+                        <h3>🚇 捷運</h3>
+                        <p>搭乘捷運淡水信義線至「東吳大學站」下車，步行約5分鐘即可抵達</p>
+                    </div>
+                    <div class="transport-card">
+                        <h3>🚌 公車</h3>
+                        <p>搭乘以下路線至「東吳大學站」：</p>
+                        <ul>
+                            <li>紅5、紅7、紅9</li>
+                            <li>小1、小2</li>
+                            <li>市民小巴M1</li>
+                        </ul>
+                    </div>
+                    <div class="transport-card">
+                        <h3>🚗 自行開車</h3>
+                        <p>校內設有停車場，建議提前抵達。亦可使用周邊停車場</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer><a href="index.html">返回首頁</a></footer>
+
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>法律服務創意黑客松</h3>
+                    <p>用創意打造 AI 賦能的法律服務未來</p>
+                </div>
+                <div class="footer-section">
+                    <h4>聯絡資訊</h4>
+                    <p>主辦單位：東吳大學人工智慧應用社</p>
+                    <p>指導單位：東吳大學人本AI研究中心</p>
+                </div>
+                <div class="footer-section">
+                    <h4>快速連結</h4>
+                    <ul>
+                        <li><a href="schedule.html">活動時程</a></li>
+                        <li><a href="guideline.html">活動辦法</a></li>
+                        <li><a href="sponsor.html">贊助單位</a></li>
+                        <li><a href="contact.html">聯絡我們</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 法律服務創意黑客松. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
