--- a/sponsor.html
+++ b/sponsor.html
@@ -3,14 +3,281 @@
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
-    <title>協辦與贊助單位</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="法律服務創意黑客松贊助單位，包含主辦單位、協辦單位、合作夥伴與贊助方案">
+    <meta name="keywords" content="贊助單位,主辦單位,協辦單位,贊助方案">
+    <meta name="author" content="東吳大學人工智慧應用社">
+    <title>贊助單位 - 法律服務創意黑客松</title>
+    <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⚖️</text></svg>">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header><h1>協辦與贊助單位</h1></header>
+    <header class="hero-header">
+        <div class="container">
+            <nav class="main-nav">
+                <div class="logo">
+                    <h1>法律服務創意黑客松</h1>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="index.html">首頁</a></li>
+                    <li><a href="schedule.html">時程</a></li>
+                    <li><a href="guideline.html">活動辦法</a></li>
+                    <li><a href="sponsor.html" class="active">贊助單位</a></li>
+                    <li><a href="contact.html">聯絡我們</a></li>
+                </ul>
+            </nav>
+            
+            <div class="hero-content">
+                <h1 class="hero-title">贊助單位</h1>
+                <p class="hero-subtitle">感謝各界的支持與贊助</p>
+            </div>
+        </div>
+    </header>
+
     <main>
-        <p>感謝 AWS Taiwan、法律新創協會 等單位支持本次黑客松。</p>
+        <!-- 主辦單位 -->
+        <section class="overview-section">
+            <div class="container">
+                <h2 class="section-title">主辦單位</h2>
+                <div class="organizer-showcase">
+                    <div class="organizer-main">
+                        <div class="organizer-logo">🏛️</div>
+                        <h3>東吳大學 人工智慧應用社</h3>
+                        <p>致力於推廣人工智慧技術在教育與社會應用中的創新發展，透過舉辦各類活動促進學生對AI技術的認識與實踐。</p>
+                        <div class="organizer-features">
+                            <div class="feature">
+                                <span class="feature-icon">🎯</span>
+                                <span>活動策劃與執行</span>
+                            </div>
+                            <div class="feature">
+                                <span class="feature-icon">👥</span>
+                                <span>學生社群經營</span>
+                            </div>
+                            <div class="feature">
+                                <span class="feature-icon">💡</span>
+                                <span>創新技術推廣</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 指導單位 -->
+        <section class="timeline-section">
+            <div class="container">
+                <h2 class="section-title">指導單位</h2>
+                <div class="sponsor-showcase">
+                    <div class="sponsor-card platinum">
+                        <div class="sponsor-logo">🔬</div>
+                        <h3>東吳大學人本AI研究中心</h3>
+                        <p>專注於以人為本的人工智慧研究，致力於AI技術在社會各領域的負責任應用與發展。</p>
+                        <div class="sponsor-contribution">
+                            <h4>指導支援</h4>
+                            <ul>
+                                <li>活動企劃指導</li>
+                                <li>學術專業諮詢</li>
+                                <li>研究資源提供</li>
+                                <li>品質監督把關</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 協辦單位 -->
+        <section class="overview-section">
+            <div class="container">
+                <h2 class="section-title">協辦單位</h2>
+                <div class="sponsors-grid">
+                    <div class="sponsor-card gold">
+                        <div class="sponsor-logo">☁️</div>
+                        <h3>AWS Taiwan</h3>
+                        <p>全球領先的雲端運算服務提供商，提供完整的AI/ML解決方案與開發工具。</p>
+                        <div class="sponsor-contribution">
+                            <h4>技術支援</h4>
+                            <ul>
+                                <li>AWS PartyRock平台使用授權</li>
+                                <li>技術導師指導</li>
+                                <li>雲端服務資源</li>
+                                <li>評審委員支援</li>
+                            </ul>
+                        </div>
+                        <div class="sponsor-contact">
+                            <p><strong>聯絡窗口：</strong>[聯絡人]</p>
+                        </div>
+                    </div>
+
+                    <div class="sponsor-card silver">
+                        <div class="sponsor-logo">⚖️</div>
+                        <h3>台灣法律科技協會</h3>
+                        <p>致力於推動法律與科技的結合，促進法律服務的數位化轉型與創新發展。</p>
+                        <div class="sponsor-contribution">
+                            <h4>專業支援</h4>
+                            <ul>
+                                <li>法律專業諮詢</li>
+                                <li>業界實務指導</li>
+                                <li>評審委員提供</li>
+                                <li>後續發展機會</li>
+                            </ul>
+                        </div>
+                        <div class="sponsor-contact">
+                            <p><strong>聯絡窗口：</strong>[聯絡人]</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 合作夥伴 -->
+        <section class="timeline-section">
+            <div class="container">
+                <h2 class="section-title">合作夥伴</h2>
+                <div class="partners-grid">
+                    <div class="partner-card">
+                        <div class="partner-logo">🎓</div>
+                        <h3>東吳大學各院系</h3>
+                        <p>提供跨領域學術支援與學生招募管道</p>
+                    </div>
+                    <div class="partner-card">
+                        <div class="partner-logo">🏢</div>
+                        <h3>法律事務所</h3>
+                        <p>提供實務經驗分享與專業指導</p>
+                    </div>
+                    <div class="partner-card">
+                        <div class="partner-logo">💼</div>
+                        <h3>科技公司</h3>
+                        <p>提供技術支援與產業實務經驗</p>
+                    </div>
+                    <div class="partner-card">
+                        <div class="partner-logo">📚</div>
+                        <h3>出版社</h3>
+                        <p>提供法律科技相關書籍與資源</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 贊助方案 -->
+        <section class="overview-section">
+            <div class="container">
+                <h2 class="section-title">贊助方案</h2>
+                <div class="sponsorship-plans">
+                    <div class="plan-card">
+                        <div class="plan-header">
+                            <h3>鑽石贊助</h3>
+                            <div class="plan-amount">100,000+</div>
+                        </div>
+                        <ul>
+                            <li>活動冠名權</li>
+                            <li>開場致詞機會</li>
+                            <li>專屬展示攤位</li>
+                            <li>評審委員席位</li>
+                            <li>所有宣傳露出</li>
+                        </ul>
+                    </div>
+                    <div class="plan-card">
+                        <div class="plan-header">
+                            <h3>金牌贊助</h3>
+                            <div class="plan-amount">50,000-99,999</div>
+                        </div>
+                        <ul>
+                            <li>活動協辦單位</li>
+                            <li>專屬展示攤位</li>
+                            <li>評審委員席位</li>
+                            <li>網站與文宣露出</li>
+                        </ul>
+                    </div>
+                    <div class="plan-card">
+                        <div class="plan-header">
+                            <h3>銀牌贊助</h3>
+                            <div class="plan-amount">20,000-49,999</div>
+                        </div>
+                        <ul>
+                            <li>贊助單位標示</li>
+                            <li>展示攤位</li>
+                            <li>網站露出</li>
+                            <li>感謝狀</li>
+                        </ul>
+                    </div>
+                    <div class="plan-card">
+                        <div class="plan-header">
+                            <h3>銅牌贊助</h3>
+                            <div class="plan-amount">10,000-19,999</div>
+                        </div>
+                        <ul>
+                            <li>贊助單位標示</li>
+                            <li>網站露出</li>
+                            <li>感謝狀</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 聯絡贊助 -->
+        <section class="timeline-section">
+            <div class="container">
+                <h2 class="section-title">成為贊助夥伴</h2>
+                <div class="sponsorship-contact">
+                    <div class="contact-info">
+                        <h3>📞 聯絡我們</h3>
+                        <p>如果您對贊助本活動有興趣，歡迎與我們聯絡：</p>
+                        <div class="contact-details">
+                            <div class="contact-item">
+                                <strong>Email：</strong>sponsor@scuai-hackathon.tw
+                            </div>
+                            <div class="contact-item">
+                                <strong>電話：</strong>02-2881-9471 #1234
+                            </div>
+                            <div class="contact-item">
+                                <strong>Line：</strong>@scuai_hackathon
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sponsorship-benefits">
+                        <h3>🎯 贊助效益</h3>
+                        <ul>
+                            <li>提升企業品牌形象與知名度</li>
+                            <li>接觸優秀的AI與法律人才</li>
+                            <li>參與創新法律科技發展</li>
+                            <li>建立產學合作關係</li>
+                            <li>獲得創新解決方案靈感</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer><a href="index.html">返回首頁</a></footer>
+
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>法律服務創意黑客松</h3>
+                    <p>用創意打造 AI 賦能的法律服務未來</p>
+                </div>
+                <div class="footer-section">
+                    <h4>聯絡資訊</h4>
+                    <p>主辦單位：東吳大學人工智慧應用社</p>
+                    <p>指導單位：東吳大學人本AI研究中心</p>
+                </div>
+                <div class="footer-section">
+                    <h4>快速連結</h4>
+                    <ul>
+                        <li><a href="schedule.html">活動時程</a></li>
+                        <li><a href="guideline.html">活動辦法</a></li>
+                        <li><a href="sponsor.html">贊助單位</a></li>
+                        <li><a href="contact.html">聯絡我們</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 法律服務創意黑客松. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
